# speed-of-sound-cli

./: .gitattributes  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md
src/: speed-of-sound-cli.cc
test/: EPC_cli.py
